--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <nav>
         <ul>
           <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#pontos_turisticos">Pontos Turisticos</a></li>
           <li><a href="#curiosidades">Curiosidades</a></li>
+          <li><a href="#pontos_turisticos">Pontos Turisticos</a></li>
         </ul>
       </nav>
     </div>
@@ -37,7 +37,7 @@
   <section class="sc-hero" id="sobre">
     <div class="container">
       <div class="txt">
-        <h2>Sobre</h2>
+        <h1>Sobre</h1>
         <p><span>Uberaba</span> é um município brasileiro do estado de Minas Gerais, Região Sudeste do país. Localizado no Triângulo Mineiro, a 481 km a oeste da capital estadual, sua população estimada no ano de 2021 é de 340.277 habitantes, sendo assim o oitavo município mais populoso do estado.</p>
       </div>
       <div class="img-hero">
@@ -46,15 +46,55 @@
     </div>
   </section>
 
-  <section id="pontos_turisticos">
-    <h2>Pontos Turisticos</h2>
-
-
+  <section class="features" id="Curiosidades">
+    <div class="container">
+      <div class="area">
+        <div class="tittle center">
+          <h2>Curiosidades</h2>
+          <p><span>Veja</span> agora 3 curiosidades sobre Uberaba pra você ficar por dentro da melhor cidade do Triângulo Mineiro.</p>
+        </div>
+        <div class="cards-cs">
+          <div class="cs">
+            <h3>Primeiros Habitantes</h3>
+            <p>Os primeiros habitantes da cidade foram os índios tupis, os tremembés, os caiapós e araxás. Historiadores defendem que as tribos tinham hábitos nômades e costumavam se deslocar de uma região para a outra.</p>
+          </div>
+          <div class="cs">
+            <h3>Guinness World Records</h3>
+            <p>Uberaba conquistou uma marca no Guinness World Records por abrigar a maior casa de chocolate do mundo. A escultura de 15 m² foi planejada para ser exibida durante a 2ª Expocolate em 2018.</p>
+          </div>
+          <div class="cs">
+            <h3>Gado Zebu</h3>
+            <p>Uberaba é considerada a Capital do Gado Zebu. A cidade é sede de um grande complexo destinado ao estudo genético bovino, contando com diversas empresas que realizam inseminação, técnicas de reprodução, transferência de embriões e clonagem de animais.</p>
+          </div>
+        </div>
+      </div>
+      <div class="area2">
+        <div class="tittle center">
+          <h2>Apresentação</h2>
+          <p><span>Uberaba</span> em sua grandeza completou em 2 de março de 2021, 201 anos. Acompanhe abaixo o vídeo de comemoração desta data.</p>
+        </div>
+        <div class="video">
+          <iframe width="750" height="500" src="https://www.youtube.com/embed/ZzhVB2zgeVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
   </section>
   
+  <section class="new" id="pontos_turisticos">
+    <div class="container">
+      <div class="tittle">
+        <h2>Pontos Turisticos</h2>
+        <p>Abaixo temos as fotos de alguns pontos turisticos de Uberaba.</p>
+      </div>
+    </div>
+    <div class="gr-img">
+      <div class="imagem">
+        
+      </div>
+    </div>
+  </section>
 
-
-  <iframe width="100" height="100" src="https://www.youtube.com/embed/ZzhVB2zgeVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
 </body>
 
 </html>
