checkpoint FrontEnd completo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
   </section>
 
-  <section class="features" id="Curiosidades">
+  <section class="features" id="curiosidades">
     <div class="container">
       <div class="area">
         <div class="tittle center">
@@ -84,16 +84,84 @@
     <div class="container">
       <div class="tittle">
         <h2>Pontos Turisticos</h2>
-        <p>Abaixo temos as fotos de alguns pontos turisticos de Uberaba.</p>
+        <p>Abaixo temos as fotos de alguns pontos turisticos de Uberaba para matar sua curiosidade.</p>
       </div>
-    </div>
-    <div class="gr-img">
-      <div class="imagem">
-        
+      <div class="gr-img">
+        <div class="imagem">
+          <img src="img/ponto-turistico1.jpg" alt="Pontos Turisticos">
+        </div>
+        <div class="imagem">
+          <img src="img/ponto-turistico2.jpg" alt="Pontos Turisticos">
+        </div>
+        <div class="imagem">
+          <img src="img/ponto-turistico3.jpg" alt="Pontos Turisticos">
+        </div>
+        <div class="imagem">
+          <img src="img/ponto-turistico4.jpg" alt="Pontos Turisticos">
+        </div>
+        <div class="imagem">
+          <img src="img/ponto-turistico5.jpg" alt="Pontos Turisticos">
+        </div>
+        <div class="imagem">
+          <img src="img/ponto-turistico6.jpg" alt="Pontos Turisticos">
+        </div>
+        <div class="imagem">
+          <img src="img/ponto-turistico7.jpg" alt="Pontos Turisticos">
+        </div>
+        <div class="imagem">
+          <img src="img/ponto-turistico8.jpg" alt="Pontos Turisticos">
+        </div>
+        <div class="imagem">
+          <img src="img/ponto-turistico9.jpg" alt="Pontos Turisticos">
+        </div>
+        <div class="imagem">
+          <img src="img/ponto-turistico10.jpg" alt="Pontos Turisticos">
+        </div>
       </div>
     </div>
   </section>
 
+  <footer>
+    <div class="container">
+      <main>
+        <div class="area-left">
+          <img class="logo-footer" src="img/Logo.png" alt="">
+        </div>
+        <nav>
+          <div class="social-media">
+            <h5>Duvidas</h5>
+            <ul>
+              <li><a href="">Soluções</a></li>
+              <li><a href="">Escreva pra nós</a></li>
+              <li><a href="">Fale conosco</a></li>
+            </ul>
+          </div>
+          <div class="social-media">
+            <h5>Imagens</h5>
+            <ul>
+              <li><a href="">Imagens enviados por você</a></li>
+              <li><a href="">Imagens de terceiros</a></li>
+              <li><a href="">Contato das imagens</a></li>
+            </ul>
+          </div>
+          <div class="social-media">
+            <h5>Redes Sociais</h5>
+            <ul>
+              <li><a href=""><img src="img/instagram.png" alt="logo instagram"><span>Instagram</span></a></li>
+              <li><a href=""><img src="img/youtube.png" alt="logo youtube"><span>Youtube</span></a></li>
+              <li><a href=""><img src="img/linkedin.png" alt="Logo linkedin"><span>Linkedin</span></a></li>
+            </ul>
+          </div>
+        </nav>
+      </main>
+      <div class="copy">
+        <p>2021 © Todos os direitos reservados.</p>
+        <div class="ref">
+          <span>Emanuel Sidon</span>
+        </div>
+      </div>
+    </div>
+  </footer>
   
 </body>
 
